clusters/minikube/apps/flask-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: flask-app
    namespace: default
spec:
    replicas: 3
    selector:
      matchLabels:
        app: flask-app
    template:
      metadata:
        labels:
          app: flask-app
      spec:
        containers:
        - name: flask-app
          image: stephenkuria/flask-canary-app:v2
          ports:
          - containerPort: 5000
